Use the new getFirst() and getLast() methods.